# dataflow

./: CMakeLists.txt  Doxyfile.in  README.md
doc/: handlers.md  parameters.md
include/handlers/: handler.hpp  index.hpp
include/parameters/: dictionary.tcc  parameter.tcc  path.hpp  tuple.tcc
src/handlers/: handler.cpp  index.cpp
src/parameters/: path.cpp
tests/: main.cpp  parameters-path.cpp  parameters.cpp
